--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ bcrypt==4.1.2
 python-dotenv==1.0.0
 cryptography==41.0.7
 Flask-Limiter==3.0.0
-gunicorn==21.2.0
 Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.23
-psycopg2-binary==2.9.9
 pymysql==1.1.0
+SQLAlchemy==2.0.29
+gunicorn
+flask
+psycopg2-binary
